# Ontocellia

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: agent-tissue-design.md  architecture.md  communication.md  framework.md  official-benchmarks.md  review-findings.md  roadmap.md  usage.md  web-lab-design.md
docs/schema/: environment-spec.md  experiment-spec.md  genome-spec.md
examples/specs/: minimal_genome.yaml  (+1 more)
tests/: test_agent_tissue_framework.py  test_agent_tissue_specs.py  test_app_server.py  test_cli_v02.py  test_complete_task_tissue_demo.py  test_context_homeostasis.py  test_context_metabolism.py  test_contribution_attribution.py  test_developmental_annealing.py  test_experiments.py  test_extracellular_tool_runtime.py  test_framework_cell_layer.py  test_framework_communication_layer.py  test_framework_developmental_field.py  test_framework_execution_layer.py  test_framework_genome_layer.py  test_framework_mcp_adapter.py  test_framework_mutation_selection.py  test_framework_validation_runner.py  test_induction_compiler.py  test_interactive_tissue_session.py  test_interactive_tui.py  test_llm_effector_layer.py  test_llm_live_e2e.py  test_longitudinal_replay.py  test_model_config_cli.py  test_official_agent_adapters.py  test_official_benchmark_runner.py  test_official_benchmark_sources.py  test_output_metabolism.py  test_pipeline_and_schema.py  test_resource_competition.py  test_runtime.py  test_selection_solidification_v2.py  test_single_stem_developmental_runtime.py  test_spec_mode.py  test_structure_search.py  test_tissue_benchmark_harness.py
(+81 files in other folders)
