[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontocellia"
version = "0.2.0"
description = "A developmental agent architecture and framework with a biologically grounded reference runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10",
  "networkx>=3.5",
  "numpy>=2.3",
  "PyYAML>=6.0",
]

[project.scripts]
ontocellia = "ontocellia.__main__:main"
ontocellia-demo = "ontocellia.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
